--- a/index.html
+++ b/index.html
@@ -4,8 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="custom.css">
+
 </head>
+
 <body>
-    <h1>Hello, World!</h1>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+        <a class="navbar-brand" href="#">Curso Imperdível</a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+            <span class="navbar-toggler-icon"></span>
+
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Início</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#sobre">Sobre o Curso</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#conteudo">Conteúdo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#inscricao">Inscrição</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contato">Contato</a>
+                </li>
+                <li class="nav-item">
+                    <a class="btn btn-ligth" href="#inscricao">Inscreva-se</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <header>
+        Conteudo do topo
+    </header>
+
+    <section>
+        Apresentacao
+    </section>
+        Diferenciais
+    <section>
+        Modulos
+    </section>
+        Inscreva-se
+    <section>
+        Contato
+    </section>
+
+    <section>
+
+    </section>
+
+    <section>
+
+    </section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
